--- a/app/src/main/res/layout/tapping_game_activity.xml
+++ b/app/src/main/res/layout/tapping_game_activity.xml
@@ -2,5 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <TextView
+        android:id="@+id/received"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/edit_text"
+        android:layout_gravity="center_horizontal"/>
 </LinearLayout>
