--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,42 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp" tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_height="300dp"
-        android:layout_width="fill_parent"
-        android:src="@drawable/olympic_transparent" />
+    <EditText
+        android:id="@+id/username"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="100dp"
+        android:hint="@string/enter_username"
+        android:inputType="textPersonName"
+        android:background="@drawable/edit_text"
+        android:layout_gravity="center_horizontal"
+        style="@style/edit_text"/>
+
+    <EditText
+        android:id="@+id/code"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="180dp"
+        android:hint="@string/enter_code"
+        android:inputType="number"
+        android:background="@drawable/edit_text"
+        android:layout_gravity="center_horizontal"
+        style="@style/edit_text"
+        android:imeActionLabel="@string/join"
+        android:imeOptions="actionNone"/>
 
     <Button
         android:background="@drawable/blue_button"
+        android:id="@+id/join_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="200dp"
-        android:layout_gravity="center"
-        android:text="@string/play"
+        android:layout_centerHorizontal="true"
+        android:text="Join"
         style="@style/button_text"
-        android:onClick="play" />
-</LinearLayout>
+        android:layout_marginTop="100dp"
+        android:onClick="join"/>
+
+</RelativeLayout>
