--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:padding="20dp" tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <EditText
+    <TextView
         android:id="@+id/username"
         android:layout_width="300dp"
         android:layout_height="50dp"
