--- a/app/src/main/res/layout/blank_game_activity.xml
+++ b/app/src/main/res/layout/blank_game_activity.xml
@@ -4,11 +4,17 @@
     android:layout_height="match_parent">
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/waitingRoomMessage"
         android:id="@+id/tapContent"
         android:layout_gravity="center_horizontal"
         android:gravity="center_vertical"
         android:singleLine="true" />
+
+    <Button
+        android:id="@+id/startButton"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="@string/start" />
 </LinearLayout>
