--- a/app/src/main/res/layout/blank_game_activity.xml
+++ b/app/src/main/res/layout/blank_game_activity.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,9 +14,14 @@
         android:gravity="center_vertical"
         android:singleLine="true" />
 
-    <Button
+    <com.melnykov.fab.FloatingActionButton
         android:id="@+id/startButton"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="@string/start" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_play_arrow_black_24dp"
+        fab:fab_colorNormal="@color/accent"
+        />
+
+</FrameLayout>
