--- a/app/src/main/res/layout/blank_game_activity.xml
+++ b/app/src/main/res/layout/blank_game_activity.xml
@@ -20,8 +20,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_play_arrow_black_24dp"
+        android:src="@drawable/ic_play_arrow_white_24dp"
         fab:fab_colorNormal="@color/accent"
+        fab:fab_colorPressed="@color/material_teal_800"
+        fab:fab_colorRipple="@color/material_teal_A200"
         />
 
 </FrameLayout>
