--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,10 @@
     <color name="material_amber_500">#FFC107</color>
     <color name="material_amber_700">#FFA000</color>
     <color name="material_teal_A200">#64FFDA</color>
+    <color name="material_teal_500">#009688</color>
+    <color name="material_teal_800">#00695C</color>
 
     <color name="primary">@color/material_amber_500</color>
     <color name="primary_dark">@color/material_amber_700</color>
-    <color name="accent">@color/material_teal_A200</color>
+    <color name="accent">@color/material_teal_500</color>
 </resources>
