--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -6,16 +6,19 @@
     android:orientation="vertical">
     <ImageView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/image"
+        android:id="@+id/grid_image"
         android:layout_width="@dimen/grid_view_item_width"
         android:layout_height="@dimen/grid_view_item_height"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal"/>
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/grid_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_centerInParent="true"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:gravity="center_horizontal"/>
 
 </LinearLayout>
