--- a/app/src/main/res/layout/tapping_game_activity.xml
+++ b/app/src/main/res/layout/tapping_game_activity.xml
@@ -5,12 +5,6 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/tapGameMessage"
-        android:id="@+id/tapContent"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_vertical"
-        android:singleLine="true" />
+        style="@style/gameTitle"/>
 </LinearLayout>
