image for shake

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,11 +9,13 @@
 
     <style name="gameTitle">
         <item name="android:singleLine">true</item>
-        <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center|top</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:layout_marginTop">30sp</item>
     </style>
 
 </resources>
