--- a/app/src/main/res/layout/swipe_game_activity.xml
+++ b/app/src/main/res/layout/swipe_game_activity.xml
@@ -7,4 +7,11 @@
         android:text="@string/swipeGameTitle"
         style="@style/gameTitle"/>
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/swipe_up"
+        android:layout_gravity="center" />
+
 </FrameLayout>
