--- a/app/src/main/res/layout/tapping_game_activity.xml
+++ b/app/src/main/res/layout/tapping_game_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,4 +7,12 @@
     <TextView
         android:text="@string/tapGameMessage"
         style="@style/gameTitle" />
-</LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/target"
+        android:layout_gravity="center" />
+
+</FrameLayout>
