--- a/app/src/main/res/layout/blank_game_activity.xml
+++ b/app/src/main/res/layout/blank_game_activity.xml
@@ -9,8 +9,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/gridview"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:clipToPadding="false"
         android:columnWidth="@dimen/grid_view_column_width"
         android:gravity="center"
