BlankGameActivity: Add a message

--- a/app/src/main/res/layout/blank_game_activity.xml
+++ b/app/src/main/res/layout/blank_game_activity.xml
@@ -4,13 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:text="@string/joiningMessage"
+        style="@style/smallTitle"/>
+
     <GridView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="100dp"
         android:clipToPadding="false"
         android:columnWidth="@dimen/grid_view_column_width"
         android:gravity="center"
