--- a/app/src/main/res/layout/fragment_players_list.xml
+++ b/app/src/main/res/layout/fragment_players_list.xml
@@ -32,4 +32,4 @@ Copyright 2014 Google Inc. All rights reserved.
     android:stretchMode="columnWidth"
     android:verticalSpacing="@dimen/grid_view_vertical_spacing"
     android:horizontalSpacing="@dimen/grid_view_horizontal_spacing"
-    tools:context="com.example.mirnabouchra.cloudolympics.games.BlankGameActivity$PlayersListFragment"/>
+    tools:context="com.google.cloudcup.games.BlankGameActivity$PlayersListFragment"/>
